--- a/purchase.css
+++ b/purchase.css
@@ -88,6 +88,10 @@ main img {
     align-items: center;
 }
 
+.imgbackground:hover , .imgbackground-sm:hover {
+	cursor: pointer;
+}
+
 .brand {
 	display: flex;
 	align-items: center;
@@ -109,7 +113,7 @@ main img {
 	background-color: white;
 	color: #007BFF;
 	font-size: 1.2rem;
-	padding: 13px 10px ;
+	padding: 10px;
 	border-radius: 5px;
 	margin-top: 20px;
 	border: 2px solid #007BFF;
@@ -129,7 +133,7 @@ main img {
 	color: white;
 	border: 2px solid #007BFF;
 	font-size: 1.2rem;
-	padding: 13px 10px;
+	padding: 10px;
 	border-radius: 5px;
 	width: 48%;
 	margin-top: 20px;
@@ -185,6 +189,10 @@ main img {
 .star-container {
 	color: #007BFF;
 	margin-bottom: 40px;
+}
+
+.star-container:hover {
+	cursor: pointer;
 }
 
 .fa-star {
